Filter loader: deleted search using generated class. Removed the connection string to the local db in the config.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -36,7 +36,7 @@
     </specialSources>
   </loggingConfiguration>
   <connectionStrings>
-    <add name="ClientPortalProgContext" connectionString="data source=EVTUSHENKOT;initial catalog=DA_Backup_04_10_18;user id=sa;password=qsE123awD; MultipleActiveResultSets=True;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <add name="ClientPortalProgContext" connectionString="data source=biz\sqlexpress;initial catalog=DirectAgentsTest;user id=sa;password=sp0ngbOb; MultipleActiveResultSets=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
