Add an argument to SyncAmazonPdaCommand to extract daily statistics from the database.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/App.config
@@ -79,6 +79,9 @@
       <setting name="CookiesDirectory" serializeAs="String">
         <value>Cookies</value>
       </setting>
+      <setting name="FromDatabase" serializeAs="String">
+        <value>False</value>
+      </setting>
     </CakeExtractor.SeleniumApplication.Properties.Settings>
   </userSettings>
   <runtime>
