--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/Settings.settings
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/Settings.settings
@@ -41,5 +41,8 @@
     <Setting Name="CookiesDirectory" Type="System.String" Scope="User">
       <Value Profile="(Default)">Cookies</Value>
     </Setting>
+    <Setting Name="FromDatabase" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
