Add a Type column to the Strategy table in the database: rename the old Type column to TargetingType and add a new one.

--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -661,6 +661,8 @@
       <DependentUpon>SearchReportRuntimeTextTemplate.tt</DependentUpon>
     </Compile>
     <Compile Include="Reports\SimpleReportManager.cs" />
+    <Compile Include="SimpleRepositories\Interfaces\ISimpleRepository.cs" />
+    <Compile Include="SimpleRepositories\TypeRepository.cs" />
     <Compile Include="Syncher.cs" />
     <Compile Include="Data\UsersContext.cs" />
     <Compile Include="Common\RetryUtility.cs" />
