--- a/1/DirectAgents.Domain/DirectAgents.Domain.csproj
+++ b/1/DirectAgents.Domain/DirectAgents.Domain.csproj
@@ -570,9 +570,13 @@
     <Compile Include="MigrationsTD\201811201539381_Mig_ExtendKeywordAndSearchTermSummaries.Designer.cs">
       <DependentUpon>201811201539381_Mig_ExtendKeywordAndSearchTermSummaries.cs</DependentUpon>
     </Compile>
-    <Compile Include="MigrationsTD\201812071124455_Mig_AddCampaignType.cs" />
-    <Compile Include="MigrationsTD\201812071124455_Mig_AddCampaignType.Designer.cs">
-      <DependentUpon>201812071124455_Mig_AddCampaignType.cs</DependentUpon>
+    <Compile Include="MigrationsTD\201812221317369_Mig_RenameStrategyTypeColumnToTargetType.cs" />
+    <Compile Include="MigrationsTD\201812221317369_Mig_RenameStrategyTypeColumnToTargetType.Designer.cs">
+      <DependentUpon>201812221317369_Mig_RenameStrategyTypeColumnToTargetType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MigrationsTD\201812221348160_Mig_AddTypeColumnToStrategyTable.cs" />
+    <Compile Include="MigrationsTD\201812221348160_Mig_AddTypeColumnToStrategyTable.Designer.cs">
+      <DependentUpon>201812221348160_Mig_AddTypeColumnToStrategyTable.cs</DependentUpon>
     </Compile>
     <Compile Include="MigrationsTD\Configuration.cs" />
     <Compile Include="Migrations\201405292045335_InitialCreate.cs" />
@@ -940,8 +944,11 @@
     <EmbeddedResource Include="MigrationsTD\201811201539381_Mig_ExtendKeywordAndSearchTermSummaries.resx">
       <DependentUpon>201811201539381_Mig_ExtendKeywordAndSearchTermSummaries.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MigrationsTD\201812071124455_Mig_AddCampaignType.resx">
-      <DependentUpon>201812071124455_Mig_AddCampaignType.cs</DependentUpon>
+    <EmbeddedResource Include="MigrationsTD\201812221317369_Mig_RenameStrategyTypeColumnToTargetType.resx">
+      <DependentUpon>201812221317369_Mig_RenameStrategyTypeColumnToTargetType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MigrationsTD\201812221348160_Mig_AddTypeColumnToStrategyTable.resx">
+      <DependentUpon>201812221348160_Mig_AddTypeColumnToStrategyTable.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201405292045335_InitialCreate.resx">
       <DependentUpon>201405292045335_InitialCreate.cs</DependentUpon>
