--- a/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
+++ b/3/CakeExtracter/CakeExtracter/CakeExtracter.csproj
@@ -662,6 +662,7 @@
     </Compile>
     <Compile Include="Reports\SimpleReportManager.cs" />
     <Compile Include="SimpleRepositories\Interfaces\ISimpleRepository.cs" />
+    <Compile Include="SimpleRepositories\StrategyRepository.cs" />
     <Compile Include="SimpleRepositories\TypeRepository.cs" />
     <Compile Include="Syncher.cs" />
     <Compile Include="Data\UsersContext.cs" />
