Do not start the task right now if the start time has passed, and add additional logs.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication.csproj
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Models\AmazonReportColumnMapping.cs" />
     <Compile Include="Models\AmazonReportSummary.cs" />
     <Compile Include="Models\AuthorizationModel.cs" />
+    <Compile Include="Models\JobScheduleModel.cs" />
     <Compile Include="SeleniumExtractors\AmazonPdaExtractors\AmazonPdaCampaignExtractor.cs" />
     <Compile Include="SeleniumExtractors\AmazonPdaExtractors\AmazonPdaDailyExtractor.cs" />
     <Compile Include="SeleniumExtractors\AmazonPdaExtractors\AmazonPdaExtractor.cs" />
