--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/packages.config
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/packages.config
@@ -5,6 +5,7 @@
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net461" />
   <package id="ManyConsole" version="1.0.0.4" targetFramework="net461" />
   <package id="Mono.Options" version="5.3.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="Quartz" version="3.0.7" targetFramework="net461" />
   <package id="Selenium.Chrome.WebDriver" version="2.43" targetFramework="net461" />
   <package id="Selenium.Support" version="3.141.0" targetFramework="net461" />
