--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication.csproj
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication.csproj
@@ -53,6 +53,10 @@
     <Reference Include="Quartz, Version=3.0.7.0, Culture=neutral, PublicKeyToken=f6b8c98a402cc8a4, processorArchitecture=MSIL">
       <HintPath>..\..\DirectAgents.Web\packages\Quartz.3.0.7\lib\net452\Quartz.dll</HintPath>
     </Reference>
+    <Reference Include="RestSharp, Version=106.3.1.0, Culture=neutral, PublicKeyToken=598062e77f915f75, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DirectAgents.Web\packages\RestSharp.106.3.1\lib\net452\RestSharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="System.Configuration" />
@@ -62,6 +66,8 @@
     <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\..\DirectAgents.Web\packages\System.ValueTuple.4.4.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -78,12 +84,20 @@
   <ItemGroup>
     <Compile Include="Commands\SyncAmazonPdaCommand.cs" />
     <Compile Include="Drivers\ChromeWebDriver.cs" />
+    <Compile Include="Enums\AmazonCmApiMetrics.cs" />
     <Compile Include="Enums\AmazonReportMetrics.cs" />
+    <Compile Include="Helpers\AmazonCmApiHelper.cs" />
     <Compile Include="Helpers\CookieManager.cs" />
-    <Compile Include="Models\AmazonReportColumnMapping.cs" />
-    <Compile Include="Models\AmazonReportSummary.cs" />
-    <Compile Include="Models\AuthorizationModel.cs" />
-    <Compile Include="Models\JobScheduleModel.cs" />
+    <Compile Include="Helpers\RestRequestHelper.cs" />
+    <Compile Include="Helpers\TimeHelper.cs" />
+    <Compile Include="Models\ConsoleManagerUtilityModels\AmazonCmApiCampaignSummary.cs" />
+    <Compile Include="Models\ConsoleManagerUtilityModels\AmazonCmApiParams.cs" />
+    <Compile Include="Models\ConsoleManagerUtilityModels\Filter.cs" />
+    <Compile Include="Models\ReportModels\AmazonReportColumnMapping.cs" />
+    <Compile Include="Models\ReportModels\AmazonReportSummary.cs" />
+    <Compile Include="Models\CommonHelperModels\AuthorizationModel.cs" />
+    <Compile Include="Models\CommonHelperModels\JobScheduleModel.cs" />
+    <Compile Include="Utilities\AmazonConsoleManagerUtility.cs" />
     <Compile Include="SeleniumExtractors\AmazonPdaExtractors\AmazonPdaCampaignExtractor.cs" />
     <Compile Include="SeleniumExtractors\AmazonPdaExtractors\AmazonPdaDailyExtractor.cs" />
     <Compile Include="SeleniumExtractors\AmazonPdaExtractors\AmazonPdaExtractor.cs" />
