--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -7,7 +7,6 @@
   <package id="EnterpriseLibrary.Common" version="6.0.1304.0" targetFramework="net45" />
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
-  <package id="EntityFramework.Extended" version="6.1.0.133" targetFramework="net45" />
   <package id="EPPlus" version="4.5.2.1" targetFramework="net452" />
   <package id="Google.Ads.Common" version="9.4.0" targetFramework="net452" />
   <package id="Google.AdWords" version="23.6.0" targetFramework="net452" />
@@ -69,4 +68,6 @@
   <package id="System.Xml.ReaderWriter" version="4.3.1" targetFramework="net461" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net452" />
   <package id="WatiN" version="2.1.0" targetFramework="net45" />
+  <package id="Z.EntityFramework.Extensions" version="3.16.17" targetFramework="net461" />
+  <package id="Z.EntityFramework.Plus.EF6" version="1.8.21" targetFramework="net461" />
 </packages>
