Add an argument to the daSynchAmazonStats command to store reports received from Amazon API.

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -65,6 +65,7 @@
     <add key="AmazonAuthCode" value="ANnhMugiYCuDlSyoEKdJ" />
     <!--<add key="AmazonAuthCode" value="ANyvcToCyYtvRsPgWwaR" />--><!-- granted access to ronnie's account -->
     <add key="AmazonRefreshToken" value="" />
+    <add key="AmazonReportsBaseFolder" value="C:\DirectAgents\daSynchAmazonStats\Reports" />
     <add key="Amazon_Alt1" value="3697485300977692" /><!-- AvoDerm -->
     <add key="AmazonAuthCode_Alt1" value="ANIxnrbjMDzBPhYGvHwx" /><!-- granted access to brendan's account -->
     <add key="Amazon_Alt2" value="506658790463709,2809006642760398" /><!-- Carhartt Sportswear - Mens, Carhartt Women's Collection -->
