Changed certificate path for VM production

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -204,7 +204,8 @@
     <add key="AdformBaseUrl" value="https://api.adform.com" />
 
     <add key="AppleBaseUrl" value="https://api.searchads.apple.com/api/v1/" />
-    <add key="AppleP12Location" value="C:\DA\portal\API\AppleCertificate{0}.p12" />
+    <!-- the job expects the certificate at this path. -->
+    <add key="AppleP12Location" value="C:\Certificates\AppleCertificate{0}.p12" />
     <!--<add key="AppleP12Location" value="d:\home\DA\portal\API\AppleCertificate{0}.p12"/>--><!-- azure -->
     <add key="AppleP12Password" value="appleda1" />
 
