Clean up repo from obsolete publish configs, user files. Switch Web project to work on IIS Express. Updated publish profiles for ETL to transform connection strings.

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ debug
 Debug - EOM
 results
 *.csproj.user
+*.pubxml.user
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
@@ -30,4 +31,3 @@ ThirdParty
 
 # NuGet
 packages
-
