Rid of manyconsole plugin in Selenium application.

--- a/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/VcdSettings.settings
+++ b/3/CakeExtractor.SeleniumApplication/CakeExtractor.SeleniumApplication/Properties/VcdSettings.settings
@@ -6,10 +6,10 @@
       <Value Profile="(Default)">1</Value>
     </Setting>
     <Setting Name="StartDate" Type="System.DateTime" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">2019-01-10</Value>
     </Setting>
     <Setting Name="EndDate" Type="System.DateTime" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">2019-01-10</Value>
     </Setting>
     <Setting Name="AccountId" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">1437</Value>
